BuildHughes/translation-tool/inputs/source_meta/objects/Location_Order_LineItem_Prod__c.object
<CustomObject>
    <fields>
        <fullName>Adapter_Model_Order_Offer_LI_Name__c</fullName>
        <label>Adapter Model Order Offer LI Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adapter_Model_Order_Offer_LI__c</fullName>
        <label>Adapter Model Order Offer LI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adapter_Model__c</fullName>
        <label>Adapter Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOMs__c</fullName>
        <label>BOMs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Support_Level__c</fullName>
        <label>Help Desk Support Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Support_Order_Offer_LI_Name__c</fullName>
        <label>Install Support Order Offer LI Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Support_Order_Offer_LI__c</fullName>
        <label>Install Support  Order Offer LI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Support__c</fullName>
        <label>Install Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Purchase__c</fullName>
        <label>Lease or Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Lease Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Order_LineItem__c</fullName>
        <label>Location Order LineItem</label>
        <referenceTo>Location_Order_LineItem__c</referenceTo>
        <relationshipName>Location_Order_LineItem_Prods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordered_Site_Type_Order_offer_LI_Name__c</fullName>
        <label>Ordered Site Type Order offer LI Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Site_Type_Order_offer_LI__c</fullName>
        <label>Ordered Site Type Order offer LI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Site_Type__c</fullName>
        <label>Customer Product / Ordered Site Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Created as a part of D-00865 Data Model SyncUp by Varsha</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Grouping__c</fullName>
        <label>Product Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maint_Order_Offer_LI_Name__c</fullName>
        <label>Remote Maint Order Offer LI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maint_Order_Offer_LI__c</fullName>
        <label>Remote Maint Order Offer LI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maintenance__c</fullName>
        <label>Remote Maintenance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upfront_Charge__c</fullName>
        <description>Created as per Data Model Sync Up D-00865 By Varsha</description>
        <label>Upfront Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loc Order LineItem Products</label>
    <nameField>
        <displayFormat>LOCORDLIPDT - {0000000000}</displayFormat>
        <label>Location Order LineItem Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loc Order LineItem Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>